--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,7 @@
   cp = cherry-pick
   graph = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%aN>%Creset'
   lg = log --oneline --graph --decorate
+  when = "for-each-ref --sort=-committerdate --format='%(refname:short) %(committerdate:short)'"
 [color]
   ui = auto
 [push]
